public/index.css
.device-holder{
    margin: var(--xlarge);
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: flex-start;
    align-content: flex-start;
    grid-gap: var(--xlarge);
}

.device{
    background-color: var(--color-card-background);
    padding: var(--large);
    width: 400px;
    border-radius: var(--large);
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-content: flex-start;
    flex-grow: 1;
    transition: .3s;
    overflow: hidden;
}

.device:hover{
    box-shadow: 0 0 10px #666;
    transition: .3s;
}

.additional-holder{
    margin: auto;
    display: flex;
    gap: var(--large);
}

.additional-holder > h3 {
    margin: auto;
}

.additional-holder > svg {
    width: 2em;
    height: 2em;
    fill: var(--color-text-default);
}

.plus-symbol{
    position: relative;
    width: 2em;
    height: 2em;
}

.plus-symbol::after{
    content: '';
    position: absolute;
    left: 40%;
    top: 5%;
    width: 20%;
    height: 90%;
    background-color: var(--color-text-default);
    border-radius: .2em;
}

.plus-symbol::before{
    content: '';
    position: absolute;
    top: 40%;
    left: 5%;
    width: 90%;
    height: 20%;
    background-color: var(--color-text-default);
    border-radius: .2em;
}

.device-header{
    padding-bottom: var(--medium);
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: space-between;
}

.device-header .device-name{
    font-size: var(--device-name-font-size);
    margin: 0;
    padding: 0;
}

.device-header .device-status{
    font-size: var(--device-status-font-size);
    padding: calc(
        (
            var(--device-name-font-size) - 
            var(--device-status-font-size)
        ) / 2
    ) var(--medium);
    border-radius: var(--small);
}

.device-header .right{
    display: flex;
    flex-direction: row;
    grid-gap: var(--medium);
}

.device-measurement{
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-content: stretch;
    grid-gap: var(--large);
}

.device-measurement > div{
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    justify-content: start;
    align-content: stretch;
    grid-gap: var(--normal);
}

.device-measurement .temperature {
    flex-grow: 5;
}

.device-measurement .digital {
    flex-grow: 3;
}

.device-measurement > div > div{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    background-color: var(--color-background);
    border-radius: var(--normal);
    grid-gap: var(--medium);
    flex-grow: 1;
}

.device-measurement > div > div > *{
    padding: var(--normal);
}

.zone-text{
    margin: auto 0;
}

.zone-value{
    font-size: 1.4em;
    background-color: var(--color-accent);
    border-radius: var(--small);
}

.zone-value > *{
    position: relative;
    top: 50%;
    transform: translateY(-50%);
}

.zone-value > *::after{
    content: '°C';
}

.digital-status-text{
    margin: auto 0;
}

.digital-status-value{
    border-radius: var(--small);
}

.digital-status-value > *{
    position: relative;
    top: 50%;
    transform: translateY(-50%);
}

.error-viewer{
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: var(--color-state-danger);
    margin: var(--xlarge);
    padding: var(--xlarge);
    border-radius: var(--large);
    display: flex;
    justify-content: space-between;
    box-shadow: 0 0 var(--xlarge) var(--color-background);
}

.error-viewer > h3 {
    font-size: 1em;
}

.error-viewer > .plus-symbol {
    height: 1.2em;
    width: 1.2em;
    transform: rotate(45deg);
}

